--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@
 
 buildscript {
     repositories {
-        google()
+//        google()
         jcenter()
+        google()
     }
     dependencies {
-//       classpath 'com.android.tools.build:gradle:2.2.3'
-         classpath 'com.android.tools.build:gradle:3.5.3'
+       classpath 'com.android.tools.build:gradle:3.5.3'
+//         classpath 'com.android.tools.build:gradle:3.5.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,8 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+//        google()
         jcenter()
+        google()
     }
 }
 
